test/parser/bad/missing_first_text_label.ulm
.text
    ; Missing a label for the first instruction
    nop